# libgodot-test

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: dependencies.cmake
sample/: cube.gd
src/: main.cpp  platform.h  platform_macos.mm
